<resources>
    <string name="app_name">Controle Financeiro Pessoal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text">Controle Financeiro Pessoal</string>

    <string name="categorias">Categorias</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="sair">Sair</string>
    <string name="novo">Novo</string>
    <string name="descricao">Descrição</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="salvar">Salvar</string>
    <string name="cadastro_categoria">Cadastro Categoria</string>
    <string name="observacao">Observação</string>
    <string name="valor">Valor</string>
    <string name="cadastro_lancamento">Cadastro Lançamento</string>
</resources>
