<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categorias"
        android:id="@+id/btnCategorias"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:background="@drawable/botao_personalizado"
        android:textColor="@color/cor50" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lancamentos"
        android:id="@+id/btnLancamentos"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/botao_personalizado"
        android:textColor="@color/cor50" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:id="@+id/btnSair"
        android:layout_below="@+id/btnLancamentos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="@drawable/botao_personalizado"
        android:textColor="@color/cor50" />
</RelativeLayout>
